# dk-mage

./: .gitattributes  .gitignore  README.md  deploy.txt
configure/: clang_debug.sh  clang_release.sh  env.sh  gcc_debug.sh  gcc_release.sh  lin_debug_gcc.sh  lin_release_gcc.sh  prepare_deploy.sh  release_gcc.sh  test3.txt  win_debug_gcc.sh  win_release_gcc.sh
doc/: config.ini.md  dkmagecli-help.md  generate_small.sh
doc/samples/cave/: map03342.clm  map03342.flg  map03342.lif  map03342.own  map04444.adi  map04444.apt  map04444.clm  map04444.flg  map04444.lif  map04444.mage.ini  map04444.own  map04444.slb  map04444.tng  map04444.txt
doc/samples/herofortress/: map03456.clm  map03456.flg  map03456.own  map03456.tng  map03456.wib  map03456.wlb  map04446.adi  map04446.apt  map04446.clm  map04446.flg  map04446.lif  map04446.mage.ini  (+6 more)
sample/cave/: map03342.adi  map03342.slb  map03342.tng  map03342.txt
sample/herofortress/: map03456.adi  map03456.clm  map03456.flg  map03456.lif  map03456.own  map03456.slb  map03456.tng  map03456.txt
sample/maze/: map03340.own
src/: CMakeCompileFlags.txt  CMakeLists.txt  CMakeSanitizer.txt  CMakeUtils.txt  ParameterDefaults.cmake  config.ini.in  deploy_zip.sh.in  generate_doc.sh.in  rebuild.sh.in  run_tests.sh.in
src/adiktedpp/: CMakeLists.txt  Version.h.in
src/adiktedpp/include/adiktedpp/: AreaDetector.h  GameMap.h  LakeGenerator.h  Level.h  Map.h  Messages.h  PlayerType.h  Rand.h  Script.h  SlabType.h  SubTypeCreature.h  SubTypeDoor.h  SubTypeItem.h  SubTypeTrap.h  ThingType.h  Type.h  Version.h
src/adiktedpp/include/adiktedpp/raw/: PlayerType.h  RNG.h  RawLevel.h  SlabType.h  SubTypeCreature.h  SubTypeDoor.h  SubTypeItem.h  SubTypeTrap.h  ThingType.h
src/adiktedpp/include/adiktedpp/script/: AvailableMode.h  AvailableState.h  AvailableStateBase.h  Creator.h  Script.h  Type.h
src/adiktedpp/src/: AreaDetector.cpp  CMakeLists.txt  GameMap.cpp  LakeGenerator.cpp  Level.cpp  Map.cpp  Messages.cpp  Rand.cpp  Script.cpp  SlabType.cpp  SubTypeCreature.cpp  SubTypeDoor.cpp  SubTypeItem.cpp  SubTypeTrap.cpp  Type.cpp
src/adiktedpp/src/raw/: RNG.cpp  RawLevel.cpp  SlabType.cpp  SubTypeCreature.cpp  SubTypeDoor.cpp  SubTypeItem.cpp  SubTypeTrap.cpp  ThingType.cpp
src/adiktedpp/src/script/: AvailableMode.cpp  AvailableState.cpp  AvailableStateBase.cpp  Creator.cpp  Script.cpp  Type.cpp
src/adiktedpp/test/: AreaDetector_test.cpp  CMakeLists.txt  GameMap_test.cpp  LakeGenerator_test.cpp  Level_test.cpp  Map_test.cpp  Messages_test.cpp  Path.h  Script_test.cpp  Type_test.cpp  main.cpp  run_tests.sh.in
src/adiktedpp/test/data/map_empty/: map_empty.adi  map_empty.clm  map_empty.flg  map_empty.lif
src/adiktedpp/test/raw/: RNG_test.cpp  RawLevel_test.cpp
src/adiktedpp/test/script/: AvailableState_test.cpp  Creator_test.cpp  Type_test.cpp
src/cli/: CMakeLists.txt  main.cpp
src/cli/include/cli/: Config.h  Generator.h
src/cli/src/: CMakeLists.txt  Config.cpp  Generator.cpp  main.cpp  modes.cpp
src/cli/test/: Config_test.cpp  Generator_test.cpp
src/cmake/: CMakeCompileFlags.cmake  CMakeCoverage.cmake  Findadikted.cmake  SwigTools.cmake  lin-to-win.toolchain.cmake  patch.cmake
src/dkmage/: CMakeLists.txt
src/dkmage/include/dkmage/: BaseLevelGenerator.h  Draw.h  Generator.h  LevelGenerator.h  Parameter.h  ParameterDefaults.h  ParameterName.h
src/dkmage/include/dkmage/generator/: Dungeon.h  DungeonGraph.h  Maze.h  Spatialtem.h
src/dkmage/include/dkmage/mode/: Cave.h  CaveMode.h  HeroFortressMode.h  Maze.h  MazeMode.h
src/dkmage/include/dkmage/spatial/: Dungeon.h  DungeonGraph.h  Fortress.h  FortressRoom.h  Maze.h  Spatialtem.h
src/dkmage/src/: BaseLevelGenerator.cpp  CMakeLists.txt  Draw.cpp  Generator.cpp  LevelGenerator.cpp  Parameter.cpp  ParameterName.cpp  main.cpp
src/dkmage/src/generator/: Dungeon.cpp  DungeonGraph.cpp  Maze.cpp  Spatialtem.cpp
src/dkmage/src/mode/: Cave.cpp  CaveMode.cpp  HeroFortressMode.cpp  Maze.cpp  MazeMode.cpp
src/dkmage/src/spatial/: Dungeon.cpp  DungeonGraph.cpp  Fortress.cpp  FortressRoom.cpp  Maze.cpp  Spatialtem.cpp
src/dkmage/test/: BaseLevelGenerator_test.cpp  CMakeLists.txt  Draw_test.cpp  Generator_test.cpp  LevelGenerator_test.cpp  ParameterName_test.cpp  Parameter_test.cpp  main.cpp  run_tests.sh.in
src/dkmage/test/generator/: DungeonGraph_test.cpp  Dungeon_test.cpp  Maze_test.cpp  Spatialtem_test.cpp
src/dkmage/test/mode/: CaveMode_test.cpp  Cave_test.cpp  HeroFortressMode_test.cpp  MazeMode_test.cpp  Maze_test.cpp
src/dkmage/test/spatial/: DungeonGraph_test.cpp  Dungeon_test.cpp  FortressRoom_test.cpp  Fortress_test.cpp  Maze_test.cpp  Spatialtem_test.cpp
src/pyadiktedpp/: CMakeLists.txt
src/pyadiktedpp/adiktedpp/: CMakeLists.txt  GameMap.swg  Level.swg  Messages.swg  Rand.swg  Type.swg  Version.swg
src/pyadiktedpp/adiktedpp/raw/: PlayerType.swg  RNG.swg  RawLevel.swg  SlabType.swg  SubTypeCreature.swg  SubTypeDoor.swg  SubTypeItem.swg  SubTypeTrap.swg  ThingType.swg  raw.swg
src/pyadiktedpp/adiktedpp/script/: AvailableMode.swg  AvailableState.swg  Script.swg  script.swg
src/pyadiktedpp/example/: generate_level.py  generate_map.py
src/pyadiktedpp/testadiktedpp/: CMakeLists.txt  __init__.py  run_tests.sh.in  test_Level.py  test_Rand.py  test_Version.py  test_raw.py  test_script.py  test_type.py
src/pydkmage/: CMakeLists.txt
src/pydkmage/dkmage/: BaseLevelGenerator.swg  CMakeLists.txt  LevelGenerator.swg  Parameter.swg  ParameterDefaults.swg  ParameterName.swg
src/pydkmage/example/: generator.py
src/pydkmage/testdkmage/: CMakeLists.txt  test_Parameter.py
src/pyutils/: CMakeLists.txt
src/pyutils/testutils/: CMakeLists.txt  test_Log.py  test_Rand.py  test_Rect.py
src/pyutils/utils/: CMakeLists.txt  Log.swg  LoggingTools.swg  Rand.swg  Rect.swg
src/utils/include/utils/: Container.h  GlobalScope.h  Log.h  Macro.h  ProbabilityMass.h  Rand.h  Rect.h  Seed.h  Separator.h  Set.h
src/utils/src/: CMakeLists.txt  Log.cpp  ProbabilityMass.cpp  Rand.cpp  Rect.cpp
src/utils/test/: CMakeLists.txt  Log_test.cpp  ProbabilityMass_test.cpp  Rect_test.cpp
(+21 files in other folders)
